# python_module_test

./: README.md  pyproject.toml
src/other_module/: o_module.py
src/python_module_test/: __init__.py  main.py
tests/: test_target_module.py
