[project]
name = "python-module-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Array_fish", email = "uekusa_hideaki@yahoo.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
run-main = "python_module_test.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_module_test"]